kube_config/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-nginx
spec:
  type: LoadBalancer
  selector:
    app: vue-nginx
  ports:
  - port: 80
    targetPort: 80
