kube_config/server_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: gcr.io/photoapp-267210/server
        name: server
        ports:
        - containerPort: 8888
          name: server
      - image: gcr.io/photoapp-267210/web
        name: web
        ports:
        - containerPort: 80
          name: web
