kube_config/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 80
