kube_config/client_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /*
          backend:
              serviceName: vue-nginx
              servicePort: 80
